manifests/overlays/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: argocd-server 
            port:
              name: http
    host: argocd.ce-82249961-sa.kubepia.net
